test/files/neg/t12408.check
t12408.scala:6: warning: abstract type pattern B is unchecked since it is eliminated by erasure
    def f1[B] = a match { case _: B => }                        // warn
                                  ^
t12408.scala:7: warning: abstract type B in type pattern t12408.Renderer[B] is unchecked since it is eliminated by erasure
    def f2[B] = a match { case _: Renderer[B] => }              // warn
                                  ^
t12408.scala:8: warning: non-variable type argument Int in type pattern List[Int] (the underlying of List[Int]) is unchecked since it is eliminated by erasure
    def f3[B](xs: List[A]) = xs match { case _: List[Int] => }  // warn
                                                ^
t12408.scala:17: warning: the type test for pattern (A, B, C, D, E, F, G, H, I, J, K, L, M) cannot be checked at runtime because it has type parameters eliminated by erasure
      case _: (A,B,C,D,E,F,G,H,I,J,K,L,M) =>
              ^
error: No warnings can be incurred under -Werror.
4 warnings
1 error
